[package]
name = "utilz-rs"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/Metehan120/utilz"
description = "A lightweight extension trait collection for Rust primitives and types."
keywords = ["utility", "traits", "option", "result", "sugar"]
categories = ["development-tools", "rust-patterns"]

[features]
default = []
full = ["async"]
async = ["once_cell", "tokio", "async-trait"]

[dependencies]
once_cell = { version = "1", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
async-trait = { version = "0.1", optional = true }
